Final corrections